fix: 번들링 시 정적파일 미포함 문제 수정

--- a/public/docs/articles/2024-07-10.md
+++ b/public/docs/articles/2024-07-10.md
@@ -1,10 +1,6 @@
 > &#128680; 해당 글에 나오는 예제 코드는 [Next.js v14](https://nextjs.org/docs/14) 및 [React v18](https://18.react.dev/)을 기준으로 작성되었습니다.
 
 <br />
-
-> &#128680; 해당 글은 [어트랙션 팀 블로그](https://attraction-tech.tistory.com/9)에서 작성된 글을 아카이빙한 글입니다.
-
-<br />
 <br />
 
 ## 구현 목표
@@ -44,7 +40,7 @@
 <br />
 <br />
 
-![XSS 공격 예시](</img/content/2024-07-10 (1).png>)
+![XSS 공격 예시](</images/content/2024-07-10 (1).png>)
 
 <br />
 
@@ -79,7 +75,7 @@
 
 ## 그래서 어떻게 구현했나?
 
-![로그인 플로우 차트](</img/content/2024-07-10 (2).png>)
+![로그인 플로우 차트](</images/content/2024-07-10 (2).png>)
 
 <br />
 
@@ -108,7 +104,7 @@
 
 <br />
 
-![적용한 쿠키 옵션 예시](</img/content/2024-07-10 (3).png>)
+![적용한 쿠키 옵션 예시](</images/content/2024-07-10 (3).png>)
 
 <br />
 
@@ -379,7 +375,7 @@ export default function MyPage() {
 
 <br />
 
-![WithAuth 결과 UI](</img/content/2024-07-10 (4).png>)
+![WithAuth 결과 UI](</images/content/2024-07-10 (4).png>)
 
 <br />
 <br />
