--- a/public/docs/articles/2024-11-16.md
+++ b/public/docs/articles/2024-11-16.md
@@ -58,7 +58,7 @@
 
 ### Next.js 같은 리액트 메타 프레임워크를 사용해도 되지 않았나?
 
-`Next.js`에서는 `Static Route`에 자동으로 `SSG` 빌드를 제공해주기도 하고 숙련도 또한 조금 있었던 상태였기 때문에 다시 돌아간다면 `Next.js`를 사용했을 것 같습니다.
+`Next.js`에서는 `Static Route`에 자동으로 `SSG` 빌드를 제공해주기도 하고 숙련도 또한 조금 있었던 상태였기 때문에 `Next.js`를 사용했어도 좋았을 것 같습니다.
 
 <br />
 
@@ -68,19 +68,21 @@
 
 <br />
 
+배포 플랫폼을 사용하면 무료로 운영할 수 있어 큰 문제는 되지 않았지만 정적 페이지 하나 서빙하는데 굳이 서버까지 돌려야 하는가라는 생각도 있었긴 했습니다.
+
+<br />
+
 ### 왜 하필이면 Emotion을 사용했나?
 
 당시에는 `TailWindCSS`와 `Styled Components`를 사용해본 상태였고, `SCSS`또한 경험해봤었던 상태였습니다.
 
 <br />
 
-개인적인 경험으로 `module CSS` 나 `SCSS` 같은 경우에는 스크립트를 함께 사용하기에 조금 아쉬운 느낌이 없지 않아 있었고,
-
-`Styled Components`의 경우에는 `SSR` 환경을 지원하지 않았습니다.
+개인적인 경험으로 `module CSS` 나 `SCSS` 같은 경우에는 스크립트를 함께 사용하기에 조금 아쉬운 느낌이 없지 않아 있었고, `Styled Components`의 경우에는 매번 스타일만을 위한 컴포넌트의 이름을 짓는 것이 번거로운 데다 `SSR` 환경설정이 복잡해 보였습니다. (`CSR` 환경에서만 사용해 봤었습니다.)
 
 <br />
 
-또한 당시에는 좋지 않은 방법으로 `TailWindCSS`를 사용했었기에 `TailWindCSS`의 사용 경험이 좋지 않았던 상태였어서, 익숙했던 `SCSS` 문법과 `SSR` 환경을 지원하는 `Emotion`으로 선택하였습니다.
+또한 당시에는 좋지 않은 방법으로 `TailWindCSS`를 사용했었기에 `TailWindCSS`의 개발 경험이 좋지 않았던 상태였어서, 익숙했던 `SCSS` 문법과 `SSR` 환경설정이 편한 데다 인라인 스타일 방식 활용할 수 있는 `Emotion`으로 선택하게 되었습니다.
 
 <br />
 <br />
@@ -308,8 +310,6 @@ hydrateRoot(document.getElementById('root')!, <App />)
 ### Emotion Server 세팅
 
 필요한 `Emotion` 패키지 설치 부터 해보겠습니다.
-
-(시도해보았지만 역시나 `@emotion/styled` 패키지는 `SSR`이 적용이 되지 않았습니다.)
 
 <br />
 
@@ -565,11 +565,11 @@ dist/server/entry-server.js  96.91 kB
 <br />
 <br />
 
-![SSG 빌드 결과 1](</img/content/2024-11-16 (1).jpg>)
+![SSG 빌드 결과 1](</images/content/2024-11-16 (1).jpg>)
 
 <br />
 
-![SSG 빌드 결과 2](</img/content/2024-11-16 (2).jpg>)
+![SSG 빌드 결과 2](</images/content/2024-11-16 (2).jpg>)
 
 <br />
 <br />
