feat: 마크다운 이미지 파싱 시 사이즈 및 상태 관리 기능 추가

--- a/public/docs/articles/2024-07-10.md
+++ b/public/docs/articles/2024-07-10.md
@@ -40,7 +40,7 @@
 <br />
 <br />
 
-![XSS 공격 예시](</images/content/2024-07-10 (1).png>)
+<img src="/public/images/content/2024-07-10 (1).png" alt="XSS 공격 예시" width="1280" height="430" />
 
 <br />
 
@@ -75,7 +75,7 @@
 
 ## 그래서 어떻게 구현했나?
 
-![로그인 플로우 차트](</images/content/2024-07-10 (2).png>)
+<img src="/public/images/content/2024-07-10 (2).png" alt="로그인 플로우 차트" width="1280" height="586" />
 
 <br />
 
@@ -104,7 +104,7 @@
 
 <br />
 
-![적용한 쿠키 옵션 예시](</images/content/2024-07-10 (3).png>)
+<img src="/public/images/content/2024-07-10 (3).png" alt="적용한 쿠키 옵션 예시" width="1280" height="94" />
 
 <br />
 
@@ -375,7 +375,7 @@ export default function MyPage() {
 
 <br />
 
-![WithAuth 결과 UI](</images/content/2024-07-10 (4).png>)
+<img src="/public/images/content/2024-07-10 (4).png" alt="WithAuth 결과 UI" width="1280" height="609" />
 
 <br />
 <br />
