--- a/public/docs/articles/2024-12-18.md
+++ b/public/docs/articles/2024-12-18.md
@@ -149,7 +149,7 @@ export default {
 
 <br />
 
-![라이트 모드 다크 모드 UI 비교 예시](/images/content/theme-compare.png)
+<img src="/public/images/content/theme-compare.png" alt="라이트 모드 다크 모드 UI 비교 예시" width="1800" height="945" />
 
 <br />
 
