--- a/public/docs/articles/2024-12-31.md
+++ b/public/docs/articles/2024-12-31.md
@@ -129,7 +129,7 @@
 
 ## 구름톤 트레이닝 풀스택 6회차
 
-![구름톤 트레이닝 인트로](https://github.com/Team-VOTalks/VOTalks-FE/blob/main/public/img/ad/votalks-ad-1.jpg?raw=true)
+<img src="https://github.com/Team-VOTalks/VOTalks-FE/blob/main/public/img/ad/votalks-ad-1.jpg?raw=true" alt="구름톤 트레이닝 인트로" width="1464" height="695" />
 
 <br />
 
@@ -144,38 +144,73 @@
 
 ### HTML, CSS, JS 복습
 
-저는 트레이닝 과정을 시작한 1월부터 커리큘럼대로 제공되는 인프런 강의들을 통해 `HTML`, `CSS`, `JS`를 복습하였습니다. 개인적으로는 이 기간을 조금 더 의미있게 사용하지 못한 것이 아쉬웠던 것 같습니다. 제공된 강의를 끝까지 완강하겠다는 집착 때문에 정작 저에게 있어 부족한 부분을 의미 있게 채우지 못했던 것 같습니다.
-
-<br />
-<br />
-
-### PBL 과제
-
-구름톤 트레이닝에서는
+저는 트레이닝 과정을 시작한 1월부터 커리큘럼대로 제공되는 인프런 강의들을 통해 `HTML`, `CSS`, `JS`를 복습하였습니다. 개인적으로는 이 기간을 조금 더 의미있게 사용하지 못한 것이 아쉬웠던 것 같습니다. 제공된 강의를 끝까지 완강하겠다는 집착 때문에 정작 저에게 있어 부족한 부분을 의미 있게 채우지 못했던 것 같습니다. 다시 돌아간다면 아마 웹 표준과 접근성, WAI-ARIA, 브라우저의 렌더링 과정, 자바스크립트 동작 원리 등 저에게 필요한 조금 더 심화된 내용을 위주로 공부할 것 같습니다.
 
 <br />
 <br />
 
 ### 알고리즘 스터디
 
+구름톤 트레이닝에서는 공식적으로 1차, 2차 기간을 두어 플레이어 간의 주도적인 스터디 활동을 지원해 주었습니다. 주제가 고정된 건 아니었지만 대부분 알고리즘, CS 등의 주제로 많이들 진행하셨습니다. 저는 당시 스터디를 해보지 않아서 관련 프로세스가 생소했지만, 한번 도전해보자 라는 마인드로 스터디를 하나 만들었습니다. 처음 스터디 기획은 프론트엔드를 지망하는 사람들끼리 모여 자료구조와 알고리즘을 공부하고 비슷한 목표를 가진 사람들끼리 서로 도움이 될 수 있는 커뮤니티를 형성하는 것이었습니다. 당시 저는 남에게 공부한 내용을 전달해야할 때 학습이 잘 된다는 이야기를 실천해보려고 처음에는 제가 주체가 되어 1주일에 한 번씩 모여 발표 및 질의응답을 하는 형식으로 기획을 했었습니다. 하지만 구름에서는 활동 횟수를 많이 가져가는 것을 권장했고, 스터디원들도 동의하여 하루에 알고리즘 문제 1개씩 풀고 각자 발표하는 형태로 진행하게 되었습니다.
+
+<br />
+
+<img src="/public/images/content/jasmine-0.jpg" alt="스터디 모집 공고" width="1569" height="1205" />
+
+<br />
+
+<img src="/public/images/content/jasmine-1.jpg" alt="스터디 소개글" width="1470" height="743" />
+
+<br />
+
+<img src="/public/images/content/jasmine-2.jpg" alt="스터디 목표" width="1470" height="1118" />
+
+<br />
+
+<img src="/public/images/content/jasmine-3.jpg" alt="스터디 운영 방식" width="1470" height="1143" />
+
+<br />
+
+<img src="/public/images/content/jasmine-4.jpg" alt="스터디 노션 페이지" width="1470" height="1452" />
+
+<br />
+
+1차 스터디는 정말 유익했었습니다. 구름톤 트레이닝 과정에서 진행하는 [PBL 과제](#pbl-과제) 진행 후 어려웠던 점을 서로 공유하며 공부하기도 했었고, 구름 LMS 툴 활용법이나 플레이어 지원 같은 꿀팁들도 공유하여 초기에 순조롭게 적응할 수 있었던 것 같습니다. 알고리즘의 경우도 점진적으로 난이도를 올려가며 하루에 1문제씩 풀고 해설 강의 형식으로 발표와 질의응답을 하며 감을 잡아나갔습니다. 초기 의도대로 프론트엔드를 희망하시는 분들끼리 모여 활발하게 정보 공유와 커뮤니케이션을 할 수 있었고, 다들 너무 잘 따라와 주셔서 함께 시너지를 낼 수 있었던 것 같습니다.
+
+<br />
+
+하지만 사람들을 모아서 스터디를 진행한다는 것은 생각보다 힘든 일이었습니다. 인원이 너무 많을 경우 원활한 진행이 어렵다고 판단하여 모집 과정에서 저 포함 5명을 확정하였지만, 극 초기에 스터디 OT를 진행한 후 한 분이 자진 하차를 하셨고, 중간에는 또 한 분이 앱 개발이 적성에 맞는다고 하셔서 구름톤 트레이닝 과정을 하차하시게 되어 종래에는 저 포함 3명 밖에 남지 않았었습니다. 또한 회의록도 전부 혼자 작성하고 스터디 관리도 혼자 하며 피로감이 누적되기도 해서 결론적으로는 2차 스터디까지 이어나가지 못했고, 2차 스터디 기간 때는 프론트엔드 기술 공부에 조금 더 집중하고 싶기도 해서 완장을 내려놓고 초청 받은 다른 알고리즘 스터디에 가게 되었습니다.
+
 <br />
 <br />
 
-### 리액트 공부 시작
+### PBL 과제
+
+구름톤 트레이닝에서는 PBL 과제를 기반으로 플레이어의 주도적인 학습을 지원하였습니다. **PBL(Problem Based Learning) 과제**는 트레이닝 과정에서 플레이어들이 수행하게 되는 **문제 해결 기반 학습**을 의미합니다. 개인적으로는 정말 마음에 드는 학습 방식이었습니다. 보통 주제와 함께 요구사항을 받아 혼자 일정 기간 동안 처음부터 끝까지 구현한 후 멘토링을 통해 부족했던 부분을 보완하는 형식으로 진행하였습니다. 과제별로 새로운 기술 스택을 추가하는 식으로 구현 난이도를 점점 올리는 방식이였습니다. 다른 플레이어 분들은 보통 제공되는 짧은 동영상 형태의 구현 예시를 보고 그대로 따라 만드셨지만, 저는 디자인도 새로 하고 기능도 조금씩 더 추가하며 실제로 사용할 수 있는 프로젝트를 완성하는 것을 목표로 했습니다. 실제 프로젝트라고 생각하니 온전히 제 것이라는 느낌이 들어 잠을 줄여가며 몰입할 수 있었고, 덕분에 6개의 과제를 약 2달 정도 진행하며 빠른 시간 내에 정말 많이 성장할 수 있었던 것 같습니다.
+
+<br />
+
+특히 마지막 과제였던 노트 앱의 경우에는 macOS의 애플 노트 앱을 웹 환경의 SPA로 마이그레이션한다는 목표를 두고 실제 배포까지 진행하였습니다. 웹 기술을 사용해서 네이티브 풍의 UI를 구현하는 것을 경험할 수 있었고, 당시에는 시스템 설계에 대한 이해도가 다소 부족하여 핵심 로직을 여러 번 갈아엎기도 하며 다양한 시도를 한 덕분에 해당 프로젝트에서 또한 많이 성장할 수 있었던 것 같습니다. 당시 우연히 접한 데이터베이스 정규화에 대한 내용이 생각지도 못하게 설계에 도움이 많이 되어서 백엔드에도 관심을 갖게 되었습니다.
+
+<br />
+
+#### 진행했던 PBL 과제 모음
+
+| 순서 | 주제 | 기술 스택 | 링크 |
+| :-: | :-: | :-: | :-: |
+| 1 | To Do List | Vanilla JS | [GitHub](https://github.com/LC-02s/PBL-ToDo-List) |
+| 2 | 깃허브 파인더 | Vanilla JS, GitHub API | [GitHub](https://github.com/LC-02s/PBL-GitHub-Finder) |
+| 3 | 스프레드 시트 | Vanilla JS | [GitHub](https://github.com/LC-02s/PBL-Spread-Sheet) |
+| 4 | 지출 계산기 | React, Chart, JS | [GitHub](https://github.com/LC-02s/PBL-Account-Book) |
+| 5 | 쇼핑몰 앱 | React, Redux, JS | [GitHub](https://github.com/LC-02s/PBL-Shopping-Mall) |
+| 6 | [노트 앱](https://pbl-notes.netlify.app) | React, Redux, TS | [GitHub](https://github.com/LC-02s/PBL-Notes) |
 
 <br />
 <br />
 
 ### 현직자 멘토링
 
-<br />
-<br />
-
-### PBL Notes
-
-![PBL Notes 인트로](/images/thumbnail/pbl-notes-default.jpg)
-
-<br />
+구름톤 트레이닝에서는 오피스 아워를 통해 하루 30분에서 1시간 정도의 개인 멘토링을 지원하였습니다. 오피스 아워는 현직자 분들로 구성된 코치진 분들에게 신청을 통해 30분 정도의 멘토링을 받을 수 있는 제도였습니다. (당일에 다른 신청이 없다면 1시간 정도로 늘릴 수 있었습니다) 기본적으로는 1 대 1 로 진행되지만 스터디원들끼리 모여 단체로 코칭을 받기도 하였습니다.
 
 <br />
 <br />
@@ -185,28 +220,21 @@
 <br />
 <br />
 
-### Attraction
+## Attraction
 
-![Gmail 기반 뉴스레터 통합 관리 서비스 어트랙션 인트로](/images/thumbnail/attraction-default.jpg)
-
-<br />
+<img src="/public/images/thumbnail/attraction-default.jpg" alt="Gmail 기반 뉴스레터 통합 관리 서비스 어트랙션 인트로" width="1200" height="630" />
 
 <br />
 <br />
 
-### 사회복무요원 소집
-
-<br />
-<br />
-
-## 어트랙션 디자인 시스템
+### 어트랙션 디자인 시스템
 
 <br />
 <br />
 
 ## Synergy Meet 2024
 
-![취준생 대상 밋업 행사 시너지밋 2024 인트로](/images/thumbnail/synergy-meet-default.jpg)
+<img src="/public/images/thumbnail/synergy-meet-default.jpg" alt="취준생 대상 밋업 행사 시너지밋 2024 인트로" width="1200" height="630" />
 
 <br />
 
@@ -227,7 +255,7 @@
 
 ### 응원 참 잘하는 집
 
-![디지털 부적 발행 서비스 응원 참 잘하는 집 인트로](/images/thumbnail/eung-cham-jal-default.png)
+<img src="/public/images/thumbnail/eung-cham-jal-default.png" alt="디지털 부적 발행 서비스 응원 참 잘하는 집 인트로" width="1200" height="630" />
 
 <br />
 
@@ -244,11 +272,14 @@
 ## 2025년 목표
 
 <br />
-<br />
 
 ### 1. 포트폴리오 사이트 오픈
 
-1순위 목표입니다. 더 이상은 미룰 수 없을 것 같습니다.
+현재 이력서, 블로그, 프로젝트들을 정리해둔 제 포트폴리오 사이트를 개발하고 있습니다. 사이트 개발 자체는 오래걸리진 않을 것 같은데 안에 들어가는 문서 정리에 애를 먹고 있습니다. 간단하게 노션에 정리해둔 문서들은 저만 보는 용도로 막 적어놔서 해석이 힘드네요. 앞으로는 조금 더 구체적으로 정리해두어야겠습니다.
+
+<br />
+
+포트폴리오 사이트 오픈은 부동의 1순위 목표입니다. 더 이상은 미룰 수 없을 것 같습니다.
 
 <br />
 <br />
