style: 컨텐츠 이미지 경로 작성 방식 변경

--- a/public/docs/articles/2024-12-18.md
+++ b/public/docs/articles/2024-12-18.md
@@ -149,7 +149,7 @@ export default {
 
 <br />
 
-<img src="/public/images/content/theme-compare.png" alt="라이트 모드 다크 모드 UI 비교 예시" width="1800" height="945" />
+<img src="/public/images/content/2024-12-18__theme-compare.png" alt="라이트 모드 다크 모드 UI 비교 예시" width="1800" height="945" />
 
 <br />
 
@@ -849,14 +849,14 @@ export default RootLayout
 
 <br />
 
-해당 방식은 [GitHub 사이트](https://github.com/)의 테마 UX가 마음에 들어 어떻게 테마를 관리하는지가 궁금해서 이것저것 뒤져보다가 쿠키를 통해 관리하는 것을 본 후 착안하여 적용해본 방식입니다. GitHub은 다양한 테마를 지원하기 때문에 서버에서 관리하는 것이 적합하다고 생각되지만 단순히 라이트, 다크 모드만 지원한다면 저는 [방법 1](#방법-1-csr-및-ssr-환경-모두-가능--권장)이 리소스를 덜 써도 되기에 조금 더 적합하다고 생각하였습니다.
+해당 방식은 [GitHub 사이트](https://github.com/)의 테마 UX가 마음에 들어 어떻게 테마를 관리하는지 궁금해서 이것저것 뒤져보다가 쿠키를 통해 관리하는 것을 본 후 착안하여 적용해본 방식입니다. GitHub은 다양한 테마를 지원하기 때문에 서버에서 관리하는 것이 적합하다고 생각되지만 단순히 라이트, 다크 모드만 지원한다면 저는 [방법 1](#방법-1-csr-및-ssr-환경-모두-가능--권장)이 리소스를 덜 써도 되기에 조금 더 적합하다고 생각하였습니다.
 
 <br />
 <br />
 
 ## 후기
 
-처음에는 큰 생각없이 구현했던 기능이어서 짧게 작성하려고 했었는데, 글을 쓰면서 다시 공부해보니 브라우저의 동작 원리나 스타일 관리 방법론 등 관련된 방대한 개념을 접하게 되어 생각보다 글이 길어진 것 같습니다.
+처음에는 큰 생각없이 구현했던 기능이어서 짧게 작성하려고 했었는데, 글을 쓰면서 다시 공부해보니 브라우저의 동작 원리나 스타일 관리 방법론 등 관련된 방대한 개념을 접하게 되어 조금 더 녹여내고 싶은 욕심에 생각보다 글이 길어진 것 같습니다.
 
 <br />
 
