--- a/public/docs/articles/2024-12-31.md
+++ b/public/docs/articles/2024-12-31.md
@@ -155,23 +155,23 @@
 
 <br />
 
-<img src="/public/images/content/jasmine-0.jpg" alt="스터디 모집 공고" width="1569" height="1205" />
+<img src="/public/images/content/2024-12-31__jasmine-0.jpg" alt="스터디 모집 공고" width="1569" height="1205" />
 
 <br />
 
-<img src="/public/images/content/jasmine-1.jpg" alt="스터디 소개글" width="1470" height="743" />
+<img src="/public/images/content/2024-12-31__jasmine-1.jpg" alt="스터디 소개글" width="1470" height="743" />
 
 <br />
 
-<img src="/public/images/content/jasmine-2.jpg" alt="스터디 목표" width="1470" height="1118" />
+<img src="/public/images/content/2024-12-31__jasmine-2.jpg" alt="스터디 목표" width="1470" height="1118" />
 
 <br />
 
-<img src="/public/images/content/jasmine-3.jpg" alt="스터디 운영 방식" width="1470" height="1143" />
+<img src="/public/images/content/2024-12-31__jasmine-3.jpg" alt="스터디 운영 방식" width="1470" height="1143" />
 
 <br />
 
-<img src="/public/images/content/jasmine-4.jpg" alt="스터디 노션 페이지" width="1470" height="1452" />
+<img src="/public/images/content/2024-12-31__jasmine-4.jpg" alt="스터디 노션 페이지" width="1470" height="1452" />
 
 <br />
 
@@ -210,7 +210,25 @@
 
 ### 현직자 멘토링
 
-구름톤 트레이닝에서는 오피스 아워를 통해 하루 30분에서 1시간 정도의 개인 멘토링을 지원하였습니다. 오피스 아워는 현직자 분들로 구성된 코치진 분들에게 신청을 통해 30분 정도의 멘토링을 받을 수 있는 제도였습니다. (당일에 다른 신청이 없다면 1시간 정도로 늘릴 수 있었습니다) 기본적으로는 1 대 1 로 진행되지만 스터디원들끼리 모여 단체로 코칭을 받기도 하였습니다.
+구름톤 트레이닝에서는 오피스 아워를 통해 하루 30분에서 1시간 정도의 개인 멘토링을 지원하였습니다. 오피스 아워는 현직자 분들로 구성된 코치진 분들에게 신청을 통해 30분 정도의 멘토링을 받을 수 있는 제도였습니다. (당일에 다른 신청이 없다면 1시간 정도로 늘릴 수 있었습니다) 기본적으로는 1 대 1 로 진행되지만 스터디원들끼리 모여 단체로 코칭을 받기도 하였습니다. 구름톤 트레이닝을 하면서 가장 잘한 점을 꼽아보면 단연코 멘토링을 많이 받은 것일 듯합니다.
+
+<br />
+
+멘토링을 받으면서 정말 감명깊었던 경험이 있었는데 PBL 과제 중 리덕스로 장바구니 기능을 구현하는 것이 잘 안되어 멘토링을 받으러 갔었던 적이 있었습니다. 당시 장바구니에 상품을 담는 과정에서 `Reducer`를 통해 새로운 액션을 받아 연산을 거친 후 새로운 상태를 반환하는 과정에서 상태가 의도한대로 갱신이 되지 않는 문제가 있었습니다. 과제 마감이 임박해오는 촉박한 시간 속에 해당 문제로 하루 종일 찾아봐도 답이 나오지 않아 처음으로 과제를 마치기 전에 멘토링을 받으러 갔었는데, 당시 백엔드 코치님께서 제 코드를 직접 로컬에서 실행까지 해가며 문제를 같이 찾아 주셨고, 그 덕분에 빠르게 문제를 해결할 수 있었던 것은 물론이고 그 과정에서 정말 많이 배울 수 있었던 것 같습니다. 저는 당시까지만 해도 혼자서 머리 싸매고 어떻게든 해결해 내는 것을 덕목으로 여겼었지만 다른 사람의 도움을 받을 수 있는 환경이라면 오히려 도움을 받아서라도 빠르게 해결 후 내 것으로 만들어 성장하는 것을 덕목으로 삼아야겠다는 생각을 하게 되었습니다.
+
+<br />
+
+아래 이미지는 당시 작성했었던 메모입니다.
+
+(지금 보니 액션 함수명을 귀엽게 지어놨네요 ㅋㅋ)
+
+<br />
+
+<img src="/public/images/content/2024-12-31__redux-immer-memo-1.jpg" alt="리덕스 immer 문제 개요" width="1476" height="1326" />
+
+<br />
+
+<img src="/public/images/content/2024-12-31__redux-immer-memo-2.jpg" alt="리덕스 immer 문제 개선 코드" width="1476" height="1002" />
 
 <br />
 <br />
@@ -223,6 +241,10 @@
 ## Attraction
 
 <img src="/public/images/thumbnail/attraction-default.jpg" alt="Gmail 기반 뉴스레터 통합 관리 서비스 어트랙션 인트로" width="1200" height="630" />
+
+<br />
+
+프론트엔드 개발자로 참여한 첫 팀 프로젝트이며, 동시에 가장 아쉬움이 많이 남는 프로젝트입니다.
 
 <br />
 <br />
@@ -306,6 +328,8 @@
 ## 마무리
 
 한 번에 몰아서 회고를 적으니 너무 어렵네요. 앞으로는 제때제때 정리해야 할 것 같습니다.
+
+<br />
 
 긴 글 읽어주셔서 감사합니다. :)
 
