--- a/public/docs/articles/2024-07-10.md
+++ b/public/docs/articles/2024-07-10.md
@@ -40,7 +40,7 @@
 <br />
 <br />
 
-<img src="/public/images/content/2024-07-10 (1).png" alt="XSS 공격 예시" width="1280" height="430" />
+<img src="/public/images/content/2024-07-10__xss-example.png" alt="XSS 공격 예시" width="1280" height="430" />
 
 <br />
 
@@ -75,7 +75,7 @@
 
 ## 그래서 어떻게 구현했나?
 
-<img src="/public/images/content/2024-07-10 (2).png" alt="로그인 플로우 차트" width="1280" height="586" />
+<img src="/public/images/content/2024-07-10__login-flow.png" alt="로그인 플로우 차트" width="1280" height="586" />
 
 <br />
 
@@ -104,7 +104,7 @@
 
 <br />
 
-<img src="/public/images/content/2024-07-10 (3).png" alt="적용한 쿠키 옵션 예시" width="1280" height="94" />
+<img src="/public/images/content/2024-07-10__cookie-options.png" alt="적용한 쿠키 옵션 예시" width="1280" height="94" />
 
 <br />
 
@@ -375,7 +375,7 @@ export default function MyPage() {
 
 <br />
 
-<img src="/public/images/content/2024-07-10 (4).png" alt="WithAuth 결과 UI" width="1280" height="609" />
+<img src="/public/images/content/2024-07-10__need-login-fallback.png" alt="WithAuth 결과 UI" width="1280" height="609" />
 
 <br />
 <br />
