--- a/public/docs/articles/2024-11-16.md
+++ b/public/docs/articles/2024-11-16.md
@@ -565,11 +565,11 @@ dist/server/entry-server.js  96.91 kB
 <br />
 <br />
 
-<img src="/public/images/content/2024-11-16 (1).jpg" alt="SSG 빌드 결과 1" width="1458" height="795" />
+<img src="/public/images/content/2024-11-16__build-result-1.jpg" alt="SSG 빌드 결과 1" width="1458" height="795" />
 
 <br />
 
-<img src="/public/images/content/2024-11-16 (2).jpg" alt="SSG 빌드 결과 2" width="1467" height="692" />
+<img src="/public/images/content/2024-11-16__build-result-2.jpg" alt="SSG 빌드 결과 2" width="1467" height="692" />
 
 <br />
 <br />
