--- a/public/docs/articles/2024-11-16.md
+++ b/public/docs/articles/2024-11-16.md
@@ -48,7 +48,7 @@
 
 <br />
 
-그렇기에 선택지가 `React`로 좁혀졌습니다. `React`는 메타 프레임워크 없이 그냥 사용한다면 `CSR`방식으로 동작하게 됩니다.
+그렇기에 선택지가 `React`로 좁혀졌습니다. `React`는 메타 프레임워크 없이 그냥 사용한다면 기본적으로 `CSR`방식으로 동작하게 됩니다.
 
 물론 요즘 구글의 크롤링 봇은 `JS` 실행 결과까지 파싱을 해줘서 `SEO`에 지장이 없을 수도 있습니다.
 
@@ -82,7 +82,7 @@
 
 <br />
 
-또한 당시에는 좋지 않은 방법으로 `TailWindCSS`를 사용했었기에 `TailWindCSS`의 개발 경험이 좋지 않았던 상태였어서, 익숙했던 `SCSS` 문법과 `SSR` 환경설정이 편한 데다 인라인 스타일 방식 활용할 수 있는 `Emotion`으로 선택하게 되었습니다.
+또한 당시에는 좋지 않은 방법으로 `TailWindCSS`를 사용했었기에 `TailWindCSS`의 개발 경험이 좋지 않았던 상태였어서, 익숙했던 `SCSS` 문법과 `SSR` 환경설정이 편한 데다 인라인 스타일 방식을 활용할 수 있는 `Emotion`으로 선택하게 되었습니다.
 
 <br />
 <br />
@@ -563,6 +563,10 @@ dist/server/entry-server.js  96.91 kB
 ```
 
 <br />
+<br />
+
+아래는 빌드 결과에 대한 이미지입니다.
+
 <br />
 
 <img src="/public/images/content/2024-11-16__build-result-1.jpg" alt="SSG 빌드 결과 1" width="1458" height="795" />
